syntax = "proto3";

package test.common.router;

import "envoy/config/core/v3alpha/base.proto";
import "test/fuzz/common.proto";

// Structured input for header_parser_fuzz_test.

message TestCase {
  repeated envoy.config.core.v3alpha.HeaderValueOption headers_to_add = 1;
  repeated string headers_to_remove = 2;
  test.fuzz.StreamInfo stream_info = 3;
}
